methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:2: error: too many arguments for method fairev: ()Unit
avance(2);fairev(Color.YELLOW)
                ^